@@ -7,6 +7,10 @@ For a detailed view of what has changed, refer to the {url-repo}/commits/main[co
 
 == Unreleased
 
+Improvements::
+
+* include source location in warning message for truncated table cell if sourcemap is enabled (#2261)
+
 Bug Fixes::
 
 * allow alt text for block image, video, and audio to wrap to next line on same page (#2258)
